Incorporate Average Similarity into Cluster